--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@ a:hover { text-decoration: underline; }
   <li><a href="karstas europoje.html" target="_blank">karstas europoje</a></li>
   <li><a href="karstas europoje_1.html" target="_blank">karstas europoje 1</a></li>
   <li><a href="match answers.html" target="_blank">Match answers</a></li>
+  <li><a href="text_true_false.html" target="_blank">Text with true-false options</a></li>
 
 </ul>
 
 </body>
 </html>
+
