--- a/text_with_choice.html
+++ b/text_with_choice.html
@@ -26,7 +26,7 @@ Prieš metus miesto šiaurėje duris atvėrė nauja mokykla. Ji yra
   <option>modern</option>
 </select>
  ir labai jauki. Mokykloje gali mokytis apie 500 
-<select data-answer="moderni">
+<select data-answer="mokinių">
   <option value="">—</option>
   <option>mokiniaus</option>
   <option>mokinios</option>
@@ -144,3 +144,4 @@ function checkAnswers() {
 
 </body>
 </html>
+
