--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="lt">
 <head>
 <meta charset="UTF-8">
-<title>Mano Quizai</title>
+<title>Test your Lithuanian</title>
 <style>
 body { font-family: Arial, sans-serif; max-width: 700px; margin: 50px auto; }
 h1 { text-align: center; }
@@ -14,17 +14,11 @@ a:hover { text-decoration: underline; }
 </head>
 <body>
 
-<h1>Mano Quizai</h1>
+<h1>Test your Lithuanian</h1>
 
 <ul>
-  <li><a href="choose_answer.html" target="_blank">transportas</a></li>
-  <li><a href="conversation_with_dropdowns.html" target="_blank">conversation</a></li>
-  <li><a href="conversation_with_gaps.html" target="_blank">conversation 1</a></li>
-  <li><a href="karstas europoje.html" target="_blank">karstas europoje</a></li>
-  <li><a href="karstas europoje_1.html" target="_blank">karstas europoje 1</a></li>
-  <li><a href="match answers.html" target="_blank">Match answers</a></li>
-  <li><a href="text_true_false.html" target="_blank">Text with true-false options</a></li>
-  <li><a href="text_with_choice.html" target="_blank">Text (adjectives)</a></li>
+  <li><a href="exam_a2/exam_index.html" target="_blank">A2 level exam</a></li>
+  <li><a href="separate_tests/separate_tests_index.html" target="_blank">Other tests</a></li>
 </ul>
 
 </body>
