--- a/separate_tests/spell_month_gr_cases.html
+++ b/separate_tests/spell_month_gr_cases.html
@@ -17,16 +17,16 @@ button { padding: 10px 20px; margin-top: 20px; }
 <h2>Užduotis – įrašykite mėnesių pavadinimus teisingu linksniu</h2>
 
 <p>1. Aš gimiau <input type="text" id="g1" placeholder="—"> (January).</p>
-<p>2. Ji grįš pabaigoje <input type="text" id="g2" placeholder="—"> (February).</p>
+<p>2. Ji grįš <input type="text" id="g2" placeholder="—"> pabaigoje (February).</p>
 <p>3. Mes susitiksime <input type="text" id="g3" placeholder="—"> (March).</p>
-<p>4. Projektas bus baigtas viduryje <input type="text" id="g4" placeholder="—"> (April).</p>
-<p>5. Egzaminas vyks pradžioje <input type="text" id="g5" placeholder="—"> (May).</p>
+<p>4. Projektas bus baigtas <input type="text" id="g4" placeholder="—"> viduryje (April).</p>
+<p>5. Egzaminas vyks <input type="text" id="g5" placeholder="—"> pradžioje (May).</p>
 <p>6. Atostogos prasidės <input type="text" id="g6" placeholder="—"> (June).</p>
 <p>7. Festivalis vyks <input type="text" id="g7" placeholder="—"> (July).</p>
 <p>8. Aš dirbau visą <input type="text" id="g8" placeholder="—"> (August).</p>
 <p>9. Mokykla prasideda <input type="text" id="g9" placeholder="—"> (September).</p>
 <p>10. Lapai krenta <input type="text" id="g10" placeholder="—"> (October).</p>
-<p>11. Jis gimė pabaigoje <input type="text" id="g11" placeholder="—"> (November).</p>
+<p>11. Jis gimė <input type="text" id="g11" placeholder="—"> pabaigoje (November).</p>
 <p>12. Šventės vyksta <input type="text" id="g12" placeholder="—"> (December).</p>
 
 <button onclick="check()">Tikrinti</button>
